# boel

./: Cargo.toml
examples/: test.rs
src/: base.rs  config.rs  lib.rs  shape.rs  stride.rs
