[package]
name = "boel"
version = "0.1.0"
edition = "2021"
authors = ["ucyo <cayoglu@me.com>"]
default-run = "boel"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.*"
byteorder = "1.4.*"
clap = "2.34.*"

[dev-dependencies]
criterion = "0.3.*"
iai = "0.1.*"

[[bin]]
name = "boel"
path = "bin/cli.rs"
